se agregan interacciones

--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -7,7 +7,9 @@
     <meta name="theme-color" content="#000000" />
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui-react/2.0.1/semantic-ui-react.min.js" integrity="sha512-W9dQQ559Z5+FSXRdjP+IpKOXh7/nL29P7AiVilqTMmpEmgo93HD3PSdvB3fNKCpl1b4VSItxJEavbcDmGE8UQQ==" crossorigin="anonymous"></script>
-    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+
     <meta
       name="description"
       content="Web site created using create-react-app"
